[project]
name = "inincompatibility"
version = "0.0.4"
description = "A dependency-free, code-less socket-based solution for resolving environment incompatibilities"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["compatibility", "incompatibility", "socket"]

authors = [{name = "userElaina", email = "userelaina@pm.me"}]
maintainers = [{name = "userElaina", email = "userelaina@pm.me"}]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]

dependencies = []

[project.urls]
"Homepage" = "https://github.com/userElaina/inincompatibility"
"Bug Reports" = "https://github.com/userElaina/inincompatibility/issues"
"Source" = "https://github.com/userElaina/inincompatibility"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
